syntax = "proto3";

package zitadel.settings.v2beta;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/settings/v2beta;settings";

import "protoc-gen-openapiv2/options/annotations.proto";
import "zitadel/settings/v2beta/settings.proto";

message BrandingSettings {
  Theme light_theme = 1;
  Theme dark_theme = 2;
  string font_url = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "url to the font used";
      example: "\"https://acme.com/assets/v1/165617850692654601/policy/label/font-180950243237405441\"";
    }
  ];
  // hides the org suffix on the login form if the scope \"urn:zitadel:iam:org:domain:primary:{domainname}\" is set
  bool hide_login_name_suffix = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "hides the org suffix on the login form if the scope \"urn:zitadel:iam:org:domain:primary:{domainname}\" is set";
    }
  ];
  bool disable_watermark = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "boolean to disable the watermark";
    }
  ];
  // resource_owner_type returns if the setting is managed on the organization or on the instance
  ResourceOwnerType resource_owner_type = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "resource_owner_type returns if the setting is managed on the organization or on the instance";
    }
  ];
  ThemeMode theme_mode = 7 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "states whether both or only dark or light theme will be used";
    }
  ];
}

message Theme {
  // hex value for primary color
  string primary_color = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "hex value for primary color";
      example: "\"#5469d4\"";
    }
  ];
  // hex value for background color
  string background_color = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "hex value for background color";
      example: "\"#FAFAFA\"";
    }
  ];
  // hex value for warning color
  string warn_color = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "hex value for warn color";
      example: "\"#CD3D56\"";
    }
  ];
  // hex value for font color
  string font_color = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "hex value for font color";
      example: "\"#000000\"";
    }
  ];
  // url where the logo is served
  string logo_url = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "url to the logo";
      example: "\"https://acme.com/assets/v1/165617850692654601/policy/label/logo-180950416321494657\"";
    }
  ];
  // url where the icon is served
  string icon_url = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "url to the icon";
      example: "\"https://acme.com/assets/v1/165617850692654601/policy/label/icon-180950498874178817\"";
    }
  ];
}

enum ThemeMode {
  THEME_MODE_UNSPECIFIED = 0;
  THEME_MODE_AUTO = 1;
  THEME_MODE_LIGHT = 2;
  THEME_MODE_DARK = 3;
}